fix: fix displaying the burger menu on mobile phones

--- a/english-for-kids-base/src/components/header/burger-menu/styles.css
+++ b/english-for-kids-base/src/components/header/burger-menu/styles.css
@@ -7,6 +7,7 @@
   height: 100%;
   padding-top: 6rem;
   z-index: 100;
+  overflow: auto;
 }
 .burger-menu-wrapper {
   position: fixed;
